--- a/packages/seacows-amm/package.json
+++ b/packages/seacows-amm/package.json
@@ -13,10 +13,10 @@
     "create:dev:goerli": "graph create --node https://subgraph-goerli-dev.seacows.io/deploy seacows/seacows-amm-subgraph",
     "deploy:dev:goerli": "graph deploy --node https://subgraph-goerli-dev.seacows.io/deploy --ipfs https://ipfs-dev.seacows.io seacows/seacows-amm-subgraph --version-label 1.1.0",
     "remove:dev:goerli": "graph remove --node https://subgraph-goerli-dev.seacows.io/deploy seacows/seacows-amm-subgraph",
-    "prepare:dev:mainnet": "mustache config/prod/mainnet.json subgraph.template.yaml > subgraph.yaml",
-    "create:dev:mainnet": "graph create --node https://subgraph-mainnet-prod.seacows.io/deploy seacows/seacows-amm-subgraph",
-    "deploy:dev:mainnet": "graph deploy --node https://subgraph-mainnet-prod.seacows.io/deploy --ipfs https://ipfs-dev.seacows.io seacows/seacows-amm-subgraph --version-label 1.1.0",
-    "remove:dev:mainnet": "graph remove --node https://subgraph-mainnet-prod.seacows.io/deploy seacows/seacows-amm-subgraph"
+    "prepare:prod:mainnet": "mustache config/prod/mainnet.json subgraph.template.yaml > subgraph.yaml",
+    "create:prod:mainnet": "graph create --node https://subgraph-mainnet-prod.seacows.io/deploy seacows/seacows-amm-subgraph",
+    "deploy:prod:mainnet": "graph deploy --node https://subgraph-mainnet-prod.seacows.io/deploy --ipfs https://ipfs-dev.seacows.io seacows/seacows-amm-subgraph --version-label 1.1.0",
+    "remove:prod:mainnet": "graph remove --node https://subgraph-mainnet-prod.seacows.io/deploy seacows/seacows-amm-subgraph"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "^0.49.0",
