--- a/packages/seacows-amm/package.json
+++ b/packages/seacows-amm/package.json
@@ -19,7 +19,7 @@
     "remove:prod:mainnet": "graph remove --node https://subgraph-mainnet-prod.seacows.io/deploy seacows/seacows-amm-subgraph"
   },
   "dependencies": {
-    "@graphprotocol/graph-cli": "^0.49.0",
+    "@graphprotocol/graph-cli": "0.49.0",
     "@graphprotocol/graph-ts": "^0.30.0",
     "@yolominds/seacows-sdk": "^1.20.17"
   },
