--- a/packages/seacows-amm/package.json
+++ b/packages/seacows-amm/package.json
@@ -13,10 +13,18 @@
     "create:dev:goerli": "graph create --node https://subgraph-goerli-dev.seacows.io/deploy seacows/seacows-amm-subgraph",
     "deploy:dev:goerli": "graph deploy --node https://subgraph-goerli-dev.seacows.io/deploy --ipfs https://ipfs-dev.seacows.io seacows/seacows-amm-subgraph --version-label 1.1.0",
     "remove:dev:goerli": "graph remove --node https://subgraph-goerli-dev.seacows.io/deploy seacows/seacows-amm-subgraph",
+    "prepare:dev:mumbai": "mustache config/dev/mumbai.json subgraph.template.yaml > subgraph.yaml",
+    "create:dev:mumbai": "graph create --node https://subgraph-mumbai-dev.seacows.io/deploy seacows/seacows-amm-subgraph",
+    "deploy:dev:mumbai": "graph deploy --node https://subgraph-mumbai-dev.seacows.io/deploy --ipfs https://ipfs-dev.seacows.io seacows/seacows-amm-subgraph --version-label 1.1.0",
+    "remove:dev:mumbai": "graph remove --node https://subgraph-mumbai-dev.seacows.io/deploy seacows/seacows-amm-subgraph",
     "prepare:prod:mainnet": "mustache config/prod/mainnet.json subgraph.template.yaml > subgraph.yaml",
     "create:prod:mainnet": "graph create --node https://subgraph-mainnet-prod.seacows.io/deploy seacows/seacows-amm-subgraph",
     "deploy:prod:mainnet": "graph deploy --node https://subgraph-mainnet-prod.seacows.io/deploy --ipfs https://ipfs-dev.seacows.io seacows/seacows-amm-subgraph --version-label 1.1.0",
-    "remove:prod:mainnet": "graph remove --node https://subgraph-mainnet-prod.seacows.io/deploy seacows/seacows-amm-subgraph"
+    "remove:prod:mainnet": "graph remove --node https://subgraph-mainnet-prod.seacows.io/deploy seacows/seacows-amm-subgraph",
+    "prepare:prod:polygon": "mustache config/prod/polygon.json subgraph.template.yaml > subgraph.yaml",
+    "create:prod:polygon": "graph create --node https://subgraph-polygon-prod.seacows.io/deploy seacows/seacows-amm-subgraph",
+    "deploy:prod:polygon": "graph deploy --node https://subgraph-polygon-prod.seacows.io/deploy --ipfs https://ipfs-dev.seacows.io seacows/seacows-amm-subgraph --version-label 1.1.0",
+    "remove:prod:polygon": "graph remove --node https://subgraph-polygon-prod.seacows.io/deploy seacows/seacows-amm-subgraph"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.49.0",
